# TakeoutFixer

./: .gitignore  LICENSE  README.md  build_error.txt  index.html  package-lock.json  package.json  tailwind.config.js  updater_template.json  vite.config.ts
.github/workflows/: release.yml
Docs/: RELEASE_FLOW.md  implementation_documentation.md
src/: App.tsx  config.ts  index.css  types.ts
src-tauri/: Cargo.toml  check_errors.txt  compile_errors.txt  errors.txt  errs.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  types.rs
src-tauri/src/pipeline/: mod.rs  stage1_validator.rs  stage2_extractor.rs  stage3_indexer.rs  stage4_flattener.rs  stage5_matcher.rs  stage6_parser.rs  stage7_exif_writer.rs  stage8_output.rs
src/components/: DropZone.tsx  HistoryPage.tsx  LegalPage.tsx  OutputConfig.tsx  PipelineProgress.tsx  RunSummary.tsx  ScanConfig.tsx  ScanSummary.tsx  SettingsPage.tsx  UpdateModal.tsx  WarningModal.tsx
src/lib/: tauri.ts  updater.ts
